--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,37 @@ uuid = "c3626293-3405-4dff-8bb8-79fc30f88619"
 authors = ["Carmona <carmona@fisica.ufc.br> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
+CSV = "0.10.15"
+DataFrames = "1.7.0"
+Dates = "1.11.0"
+Distributions = "0.25.118"
+Geodesy = "1.1.0"
+Graphs = "1.12.0"
+HTTP = "1.10.15"
+JSON = "0.21.4"
+LinearAlgebra = "1.11.0"
+Memento = "1.4.1"
+PyCall = "1.96.4"
+Random = "1.11.0"
+SparseArrays = "1.11.0"
+Statistics = "1.11.1"
 julia = "1.11"
 
 [extras]
