--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.0.0-DEV"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
@@ -23,6 +24,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 CSV = "0.10.15"
 DataFrames = "1.7.0"
 Dates = "1.11.0"
+Distances = "0.10.12"
 Distributions = "0.25.118"
 Geodesy = "1.1.0"
 Graphs = "1.12.0"
