--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,9 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
 Geodesy = "0ef565a4-170c-5f04-8de2-149903a85f3d"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -26,7 +28,9 @@ DataFrames = "1.7.0"
 Dates = "1.11.0"
 Distances = "0.10.12"
 Distributions = "0.25.118"
+GeoDataFrames = "0.3.12"
 Geodesy = "1.1.0"
+GeometryBasics = "0.5.6"
 Graphs = "1.12.0"
 HTTP = "1.10.15"
 JSON = "0.21.4"
